# llm_robot_arm

./: .gitignore  build.sh  justfile
.devcontainer/: .zshrc  Dockerfile  add.sh  devcontainer.json
src/llm_proxy/: .env.example  .gitignore  package.xml  setup.cfg  setup.py
src/llm_proxy/config/: params.toml  params.yml
src/llm_proxy/launch/: llm_proxy.launch.py  test.launch.py
src/llm_proxy/llm_proxy/: analysis.py  llm_client.py  llm_proxy_node.py  test_client_node.py
src/my_interfaces/: CMakeLists.txt  package.xml
src/my_interfaces/action/: LLMQuery.action
src/my_interfaces/msg/: MyMessage.msg
src/my_interfaces/srv/: ListModels.srv
